# cuda-eth-generator

./: .gitignore  CMakeLists.txt  README.md  setup_ubuntu.sh
include/crypto/: keccak256.cuh  secp256k1.cuh
include/gpu/: eth_kernel.cuh  gpu_manager.hpp
src/: main.cpp
src/crypto/: keccak256.cu  secp256k1.cu
src/gpu/: eth_kernel.cu  gpu_manager.cpp  gpu_manager.cu  gpu_manager.hpp
